--- a/ComputerStore.Repositories/ComputerStore.Repositories.csproj
+++ b/ComputerStore.Repositories/ComputerStore.Repositories.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CS.Data\ComputerStore.Data.csproj" />
+  </ItemGroup>
+
 </Project>
