--- a/ComputerStore.Services/ComputerStore.Services.csproj
+++ b/ComputerStore.Services/ComputerStore.Services.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ComputerStore.Repositories\ComputerStore.Repositories.csproj" />
+    <ProjectReference Include="..\CS.Data\ComputerStore.Data.csproj" />
+  </ItemGroup>
 
 </Project>
