--- a/ComputerStore.WebAPI/ComputerStore.WebAPI.csproj
+++ b/ComputerStore.WebAPI/ComputerStore.WebAPI.csproj
@@ -11,9 +11,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ComputerStore.Services\ComputerStore.Services.csproj" />
     <ProjectReference Include="..\CS.Data\ComputerStore.Data.csproj" />
   </ItemGroup>
 
